--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -13,10 +13,19 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_PROJECTS: "FALSE"
-          SHOW_SHORT_INFO: "FALSE"
-          SHOW_LOC_CHART: "FALSE"
+          SHOW_UPDATED_DATE: "TRUE"
+          UPDATED_DATE_FORMAT: "%Y-%m-%d %H:%M:%S"
+          SHOW_LINES_OF_CODE: "FALSE"
+          SHOW_TOTAL_CODE_TIME: "TRUE"
+          SHOW_PROFILE_VIEWS: "FALSE"
+          SHOW_COMMIT: "TRUE"
+          SHOW_DAYS_OF_WEEK: "FALSE"
           SHOW_LANGUAGE: "FALSE"
+          SHOW_OS: "TRUE"
+          SHOW_PROJECTS: "FALSE"
+          SHOW_TIMEZONE: "TRUE"
           SHOW_EDITORS: "FALSE"
           SHOW_LANGUAGE_PER_REPO: "FALSE"
-          
+          SHOW_SHORT_INFO: "FALSE"
+          SHOW_LOC_CHART: "FALSE"
+          SYMBOL_VERSION: "1"
