--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -21,7 +21,7 @@ jobs:
           SHOW_COMMIT: "TRUE"
           SHOW_DAYS_OF_WEEK: "FALSE"
           SHOW_LANGUAGE: "FALSE"
-          SHOW_OS: "TRUE"
+          SHOW_OS: "FALSE"
           SHOW_PROJECTS: "FALSE"
           SHOW_TIMEZONE: "TRUE"
           SHOW_EDITORS: "FALSE"
